[FIX] fix preview image is out of bounds

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -30,17 +30,22 @@ body {
 
   #imgPreview {
     width: 100%;
+    height: 400px;
     border: 1px solid white;
     margin-bottom: 1rem;
+    overflow: hidden;
     display: none;
   }
 
-  #imgPreview img, #imgToTrace img{
+  #imgPreview img {
     width: 100%;
-    height: auto;
+    height: 100%;
+    object-fit: contain;
   }
 
   #imgToTrace img {
+    width: 100%;
+    height: auto;
     opacity: 0.5;
   }
 
